Added NATS KV Watcher route